--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
         </p>
         <h1>C. Smart City 3.0: Citizen co-creation</h1>
         <p>
-          Pada tahun 2014, model baru telah mulai muncul, dimana kota-kota
+          <span>Pada tahun 2014</span>, model baru telah mulai muncul, dimana kota-kota
           yang menerapkan konsep smart city mulai merangkul warganya untuk
           mendorong generasi masa depan menciptakan model kota yang lebih
-          cerdas (smart) lagi. Misalnya, Kota Wina dan Barcelona, kota-kota
-          yang aktif menerapkan konsep smart city dengan membangun ratusan
+          cerdas (smart) lagi. <span>Misalnya, Kota Wina dan Barcelona</span>, kota-kota
+          yang aktif <span>menerapkan konsep smart city</span> dengan membangun ratusan
           proyek. Tetapi beberapa dari proyek tersebut memiliki nuansa yang
           berbeda, misalnya, dalam kemitraan dengan perusahaan energi lokal,
           Wien Energy, Wina mengajak warganya untuk turut menjadi investor di
@@ -257,17 +257,17 @@
         <p>
           Konsep smart city terus mengalami perkembangan yang cepat dari tahun
           ke tahun dengan mengikuti arus perkembangan teknologi dan inovasi.
-          Konsep terbaru smart city yaitu Smart City 4.0 baru saja hadir pada
-          tahun 2017 yang diluncurkan oleh Grup Innovation Acceleration dari
-          Universitas Berkeley California, Amerika Serikat. Konsep Smart City
+          <span>Konsep terbaru smart city yaitu Smart City 4.0 </span>baru saja hadir pada
+          tahun 2017 yang <span>diluncurkan oleh Grup Innovation Acceleration dari
+          Universitas Berkeley California, Amerika Serikat</span>. Konsep Smart City
           4.0 muncul sebagai aksi dari adanya Revolusi Industri 4.0 dengan
           membawa inisiatif untuk mengembangkan keterampilan para inovator dan
-          pengusaha muda di bidang industri teknologi. Smart City 4.0
+          pengusaha muda di bidang industri teknologi. <span> Smart City 4.0
           bertujuan untuk mengembangkan keterampilan untuk revolusi industri
           4.0 dan mempercepat pengembangan teknologi bagi inovator-inovator
           muda, start-up, dan perusahaan-perusahaan teknologi untuk
           menciptakan solusi terbaik untuk menjadikan kota semakin cerdas
-          (smart), aman, dan berkelanjutan. Hal ini bertujuan untuk turut
+          (smart), aman, dan berkelanjutan</span>. Hal ini bertujuan untuk turut
           berkontribusi pada Agenda PBB tahun 2030, khususnya dalam
           Sustainable Development Goals.
         </p>
@@ -281,9 +281,9 @@
         <img src="image/jakarta.jpg" alt="" />
         <p>
           Sebagai ibukota sekaligus kota dengan tingkat urbanisasi tertinggi
-          di Indonesia, tidak heran jika Daerah Ibukota Jakarta menjadi salah
+          di Indonesia, <span>tidak heran jika Daerah Ibukota Jakarta menjadi salah
           satu pionir penerapan Internet of Things (IoT) dalam smart city di
-          Indonesia. Jakarta tercatat mulai menerapkan konsep smart city sejak
+          Indonesia</span>. Jakarta tercatat mulai menerapkan konsep smart city sejak
           tahun 2015 dengan dirilisnya Jakarta Smart City Lounge.Lebih lanjut
           lagi, pada tahun 2019 Pemerintah Kota ini menerbitkan aplikasi yang
           diberi nama Jakarta Kini (JAKI). Dengan aplikasi tersebut, warga
@@ -293,8 +293,8 @@
           September 2021 lalu, Jakarta menjadi provinsi pertama di Indonesia
           yang berhasil mendistribusikan vaksin kepada lebih dari 600.000
           individu. Bahkan, beberapa inovasi yang dilakukan oleh Pemerintah
-          Jakarta untuk membentuk Jakarta Smart City Ini telah menjadi
-          nominasi penghargaan PBB pada tahun 2023 ini (Uzone). adsffsdfsd
+          <span>Jakarta untuk membentuk Jakarta Smart City Ini telah menjadi
+          nominasi penghargaan PBB pada tahun 2023 ini (Uzone).</span>
         </p>
       </div>
       <h1>2. Yogyakarta</h1>
@@ -305,10 +305,10 @@
           adalah Kota Yogyakarta. Menurut publikasi dari Pusat Studi
           Perencanaan Pembangunan Regional (PSPPR), kota seluas kurang lebih
           32 kilometer persegi ini telah mencanangkan pembentukan smart city,
-          khususnya e-government, sejak tahun 2015 lalu dengan terbitnya
+          khususnya e-government, <span>sejak tahun 2015 lalu dengan terbitnya
           Peraturan Walikota Yogyakarta Nomor 15 Tahun 2015. Pada tahun 2018,
           pemerintah kota ini menerbitkan aplikasi dan website yang disebut
-          dengan Jogja Smart Service (JSS). Dengan aplikasi dan website ini,
+          dengan Jogja Smart Service (JSS)</span>. Dengan aplikasi dan website ini,
           masyarakat maupun pengunjung bisa melakukan banyak hal, mulai dari
           pendaftaran akta kelahiran, membuat laporan kepada Pemda hingga
           memesan tiket pariwisata yang memang sudah menjadi landmark kota
@@ -323,9 +323,9 @@
         <img src="image/Denpasar-2_0.jpeg" alt="" />
         <p>
           Kota berbasis pariwisata lain yang juga sudah menerapkan smart city
-          adalah Denpasar. Pada tahun 2016, ibu kota provinsi Bali ini
+          adalah Denpasar. Pada tahun 2016, <span>ibu kota provinsi Bali ini
           menerbitkan aplikasi bernama Pro Denpasar yang kemudian berganti
-          nama menjadi Denpasar Prama Sewaka (DPS). Satu tahun kemudian,
+          nama menjadi Denpasar Prama Sewaka (DPS)</span>. Satu tahun kemudian,
           Pemerintah Kota ini juga menerbitkan website dengan nama Pro
           Denpasar. Baik dengan website maupun aplikasi ini, penduduk kota
           Denpasar bisa melakukan banyak hal, seperti melaporkan masalah
@@ -350,8 +350,8 @@
         <p>
           Daerah lain selain Jakarta dan Makassar yang masuk ke dalam Smart
           City Index (SCI) tahun 2023 adalah Medan. Dalam indeks tersebut,
-          ibukota Sumatera Utara ini mendapatkan peringkat 112 dari 141 kota
-          yang diteliti oleh IMD World Competitiveness Center. Dengan
+        <span>ibukota Sumatera Utara ini mendapatkan peringkat 112 dari 141 kota
+          yang diteliti oleh IMD World Competitiveness Center</span>. Dengan
           mengunjungi website https://smartcity.pemkomedan.go.id/, pengunjung
           bisa mengetahui layanan apa saja yang dikembangkan oleh Pemerintah
           Medan untuk menjadi kota pintar. Salah satu di antaranya adalah
@@ -369,9 +369,9 @@
       <div class="contoh">
         <img src="image/makasar.jpg" alt="" />
         <p>
-          Dibantu dengan ASEAN-Australia Smart City Trust Fund, Makassar
+          Dibantu dengan ASEAN-Australia Smart City Trust Fund,<span> Makassar
           berhasil menjadi “kota pintar” peringkat 114 dari 141 kota pintar di
-          dunia yang masuk ke dalam Smart City Index (SCI) tahun 2023. Dalam
+          dunia yang masuk ke dalam Smart City Index (SCI) tahun 2023</span>. Dalam
           mewujudkan impian menjadi kota pintar ini, Makassar membawa tiga
           misi, yaitu pertama revolusi sumber daya manusia, termasuk
           birokrasi. Kedua, rekonstruksi kesehatan, ekonomi dan budaya dan
