fix github no image

--- a/Pengertian Bus Listrik.html
+++ b/Pengertian Bus Listrik.html
@@ -48,7 +48,7 @@
       <p class="judul">Apa itu Bus Listrik?</p>
       <div class="awal">
         <div>
-          <img src="/image/busbiasa.jpg" alt="" />
+          <img src="./image/busbiasa.jpg" alt="" />
           <p class="penjelasan">
             Singkatnya, Bus listrik adalah bus yang di tenagai oleh listrik,
             sehingga lebih ramah lingkungan.
@@ -98,9 +98,9 @@
       <p class="judul">Apa Perbedaan Bus Listrik dan Bus Biasa?</p>
       <div class="kelima">
         <div class="versus">
-          <img src="image/buslistrik.jpeg" alt="" />
+          <img src=".image/buslistrik.jpeg" alt="" />
           <p>V<span>S</span></p>
-          <img src="image/busbiasa.jpg" alt="" />
+          <img src=".image/busbiasa.jpg" alt="" />
         </div>
         <div>
           <h1>1. Kebisingan</h1>
