--- a/Pengertian MRT.html
+++ b/Pengertian MRT.html
@@ -49,7 +49,7 @@
       <p class="judul">Apa itu MRT?</p>
       <div class="awal">
         <div>
-          <img src="/image/MRTset3.jpg" alt="" />
+          <img src="./image/MRTset3.jpg" alt="" />
           <p class="penjelasan">
             Kepanjangan dari MRT adalah <span><i>Mass Rapid Transit</i></span
             >, dan <span>pengertian nya adalah adalah</span> sistem transportasi
