--- a/Pengertian Tokyo No Kaba.html
+++ b/Pengertian Tokyo No Kaba.html
@@ -47,7 +47,7 @@
       <p class="judul">Apa itu Tokyo No Kaba?</p>
       <div class="awal">
         <div>
-          <img src="/image/tokyonokabanew.jpg" alt="" />
+          <img src="./image/tokyonokabanew.jpg" alt="" />
           <p class="penjelasan">
             Tokyo no Kaba, atau "Tokyo's Hippo," adalah bus amfibi yang menjadi
             salah satu atraksi unik di Tokyo. Bus ini dirancang untuk
