--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -49,7 +49,7 @@
       <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
       <div class="awal">
         <div>
-          <img src="/image/buslistrik.jpeg" alt="" />
+          <img src="./image/buslistrik.jpeg" alt="" />
           <p>
             Untuk membangun smart city yang maju dan modern diperlukan 3 solusi
             utama yang inovatif, Seperti solusi untuk Transportasi, Solusi untuk
