--- a/Pengertian MRT.html
+++ b/Pengertian MRT.html
@@ -18,9 +18,7 @@
     ></script>
     <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   </head>
-
   <body>
-    <!-- Navbar -->
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
       <div class="navbar-logo">
@@ -92,27 +90,27 @@
         <p class="judul">Apa manfaat MRT?</p>
         <div class="kotak">
           <div>
-            <i data-feather="command"></i>
+            <i class="fa-brands fa-accessible-icon fa-solid"></i>
             <p>MRT Memberikan Kemudahan</p>
           </div>
           <div>
-            <i data-feather="lock"></i>
+            <i class="fa-solid fa-smoking"></i>
             <p>Mengurangi Polusi</p>
           </div>
           <div>
-            <i data-feather="trash"></i>
+            <i class="fa-solid fa-truck-fast"></i>
             <p>MRT Berlaju cukup cepat</p>
           </div>
           <div>
-            <i data-feather="wind"></i>
+            <i class="fa-solid fa-lightbulb"></i>
             <p>Membuat Kawasan Menjadi Lebih Berkembang</p>
           </div>
           <div>
-            <i data-feather="user"></i>
+            <i class="fa-solid fa-city"></i>
             <p>Investasi Untuk Masa Depan Indonesia</p>
           </div>
           <div>
-            <i data-feather="droplet"></i>
+            <i class="fa-solid fa-briefcase"></i>
             <p>Menciptakan Banyak Lapangan Kerja</p>
           </div>
         </div>
@@ -133,7 +131,6 @@
             sebagai proyek nasional, dengan dukungan pinjaman dari Jepang,
             memulai persiapan pembangunan jalur pertama.
           </p>
-
           <h1>2. Pengembangan pertama</h1>
           <p>
             Proses pengembangan jalur pertama MRT Jakarta dimulai ketika
@@ -148,7 +145,6 @@
             pada Maret 2019, jalur pertama MRT Jakarta diresmikan oleh Presiden
             Joko Widodo pada 24 Maret 2019.
           </p>
-
           <h1>3. Pengembangan Lanjutan</h1>
           <p>
             Bersamaan dengan peresmian fase pertama Lin Utara–Selatan MRT
