--- a/Pengertian Tokyo No Kaba.html
+++ b/Pengertian Tokyo No Kaba.html
@@ -44,6 +44,7 @@
     </nav>
     <!-- Isi -->
     <div class="isi">
+      <!-- Pertama -->
       <p class="judul">Apa itu Tokyo No Kaba?</p>
       <div class="awal">
         <div>
@@ -72,30 +73,32 @@
           </p>
         </div>
       </div>
+      <!-- Kedua -->
       <div class="kedua">
         <p class="judul">
           Apa manfaat dan keuntungan Dari kendaaraan tokyo no kaba?
         </p>
         <div class="kotak">
           <div>
-            <i data-feather="command"></i>
+            <i class="fa-solid fa-anchor"></i>
             <p>Flexibel (bisa daratan dan lautan)</p>
           </div>
           <div>
-            <i data-feather="lock"></i>
+            <i class="fa-solid fa-palette"></i>
             <p>Tampilan yang unik</p>
           </div>
           <div>
-            <i data-feather="trash"></i>
+            <i class="fa-solid fa-binoculars"></i>
             <p>Bisa sebagai tempat wisata yang unik</p>
           </div>
           <div>
-            <i data-feather="wind"></i>
+            <i class="fa-solid fa-city"></i>
             <p>Teknologi yang umum di masa mendatang</p>
           </div>
         </div>
       </div>
     </div>
+    <!-- Footer -->
     <footer>
       <div class="footeratas" id="footeratas">
         <a
