--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -16,9 +16,12 @@
       src="https://kit.fontawesome.com/1897315b86.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="image/favicon-16x16.png"
+      type="image/x-icon"
+    />
   </head>
-
   <body>
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
@@ -43,9 +46,9 @@
         </div>
       </div>
     </nav>
-
     <!-- Isi -->
     <div class="isi">
+      <!-- Pertama -->
       <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
       <div class="awal">
         <div>
@@ -73,6 +76,7 @@
           </p>
         </div>
       </div>
+      <!-- Kedua -->
       <div class="kedua">
         <p class="judul">Apa Fungsi Transportasi Umum?</p>
         <div class="kotak">
@@ -118,13 +122,23 @@
           </div>
         </div>
       </div>
+      <!-- Ketiga -->
       <div class="kedua">
         <p class="judul">Apa saja contoh transportasi umum yang canggih?</p>
         <p class="penghantar">
-          Hadirnya layanan transportasi umum yang efisien dan merata menjadi
-          kunci utama dari pergerakan orang-orang di perkotaan yang serba cepat.
-          Transportasi umum juga dapat membuat pusat kota tetap ramai dan mampu
-          mengurangi kemacetan,
+          Layanan transportasi umum yang efisien dan merata merupakan elemen
+          penting dalam mendukung mobilitas masyarakat perkotaan yang serba
+          cepat. Dengan sistem transportasi yang handal, orang-orang dapat
+          berpindah dari satu tempat ke tempat lain dengan lebih mudah dan tepat
+          waktu. Tidak hanya itu, transportasi umum juga membantu menciptakan
+          konektivitas antarwilayah yang lebih baik. Pusat-pusat kota tetap
+          hidup dan ramai dengan aktivitas karena aksesibilitas yang meningkat
+          berkat transportasi umum. Penggunaan transportasi umum yang meluas
+          turut berperan dalam mengurangi ketergantungan pada kendaraan pribadi.
+          Ini tentu saja berdampak positif terhadap volume lalu lintas di jalan
+          raya. Dengan lebih sedikit kendaraan pribadi, kemacetan dapat
+          dikurangi secara signifikan. Selain itu, transportasi umum yang ramah
+          lingkungan juga membantu menurunkan tingkat polusi udara di perkotaan.
           <span
             >kalian bisa klik kotak yang di bawah ini untuk penjelasan yang
             lebih detail pada transportasi tersebut</span
@@ -159,10 +173,10 @@
           </a>
         </div>
       </div>
+      <!-- Keempat -->
       <p class="judul">
         Apa saja solusi transportasi pada <span>Smart City? </span>
       </p>
-
       <div class="ketiga">
         <div>
           <h1>1. Sistem Transportasi Terpadu Berbasis AI</h1>
