--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +14,6 @@
   <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
-
 <body>
   <!-- Navbar -->
   <nav class="navbar" id="navbar">
@@ -38,11 +36,10 @@
         <i data-feather="sun" onclick="klikmodeterang()"></i>
       </div>
     </div>
-
   </nav>
-
   <!-- Isi -->
   <div class="isi">
+    <!-- Pertama -->
     <p class="judul">Apa itu <span>Smart City?</span></p>
     <div class="awal">
       <img src="image/smartcity.jpg" alt="Gambar Smart City" />
@@ -87,6 +84,7 @@
         </p>
       </div>
     </div>
+    <!-- Kedua -->
     <div class="kedua">
       <p class="judul">Apa Fungsi <span>Smart City?</span></p>
       <div class="kotak">
@@ -132,8 +130,8 @@
         </div>
       </div>
     </div>
+    <!-- Ketiga -->
     <p class="judul">Siapa Pencetus Konsep <span>Smart City? </span></p>
-
     <div class="ketiga">
       <img src="image/IBM.png" alt="" />
       <div>
@@ -273,10 +271,10 @@
         </p>
       </div>
     </div>
+    <!-- Keempat -->
     <p class="judul">5 <span>Smart City </span>yang ada di Indonesia</p>
     <div class="keempat">
       <h1>1. Jakarta</h1>
-
       <div class="contoh">
         <img src="image/jakarta.jpg" alt="" />
         <p>
@@ -386,6 +384,7 @@
       </div>
     </div>
   </div>
+  <!-- Footer -->
   <footer>
     <div class="footeratas" id="footeratas">  
       <a href="https://www.instagram.com/cokvrindaaa88/" id="logoig" class="logoig"><i class="fa-brands fa-instagram" ></i></a>
