--- a/Pengertian Bus Listrik.html
+++ b/Pengertian Bus Listrik.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="transprotasistyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -17,7 +16,11 @@
       src="https://kit.fontawesome.com/1897315b86.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="image/favicon-16x16.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- Navbar -->
@@ -74,27 +77,29 @@
           </p>
         </div>
       </div>
+      <!-- Kedua -->
       <div class="kedua">
         <p class="judul">Apa manfaat dan keuntungan Bus Listrik?</p>
         <div class="kotak">
           <div>
-            <i data-feather="command"></i>
+            <i class="fa-solid fa-seedling"></i>
             <p>Ramah Lingkungan</p>
           </div>
           <div>
-            <i data-feather="lock"></i>
+            <i class="fa-solid fa-music"></i>
             <p>Bebas dari bising suara mesin</p>
           </div>
           <div>
-            <i data-feather="trash"></i>
+            <i class="fa-solid fa-oil-well"></i>
             <p>Pengisian bahan bakar lebih praktis</p>
           </div>
           <div>
-            <i data-feather="wind"></i>
+            <i class="fa-solid fa-screwdriver"></i>
             <p>Perawatan mudah dan hemat</p>
           </div>
         </div>
       </div>
+      <!-- Ketiga -->
       <p class="judul">Apa Perbedaan Bus Listrik dan Bus Biasa?</p>
       <div class="kelima">
         <div class="versus">
@@ -131,6 +136,7 @@
         </div>
       </div>
     </div>
+    <!-- Footer -->
     <footer>
       <div class="footeratas" id="footeratas">
         <a
