--- a/Pengertian Tokyo No Kaba.html
+++ b/Pengertian Tokyo No Kaba.html
@@ -38,7 +38,7 @@
         <a href="Transprortasi.html">Transprotasi</a>
         <div class="isidropdown-mode">
           <i data-feather="moon" id="modegelap" onclick="klikmodegelap()"></i>
-          <i data-feather="sun" onclick="klikmodeterang()"></i>
+          <i data-feather="sun" id="modeterang" onclick="klikmodeterang()"></i>
         </div>
       </div>
     </nav>
