--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -32,7 +32,7 @@
         <a href="index.html">Pengertian</a>
         <a href="Transprortasi.html">Transprotasi</a>
         <i data-feather="moon" id="modegelap" onclick="klikmodegelap()"></i>
-        <i data-feather="sun" onclick="klikmodeterang()"></i>
+        <i data-feather="sun" id="modeterang" onclick="klikmodeterang()"></i>
       </div>
       <i data-feather="menu" id="menu"></i>
     </nav>
