--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -49,7 +49,7 @@
     <!-- Isi -->
     <div class="isi">
       <!-- Pertama -->
-      <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
+      <p class="judul">Solusi <span>Transportasi</span> pada <span>Smart City</span></p>
       <div class="awal">
         <div>
           <img src="./image/buslistrik.jpeg" alt="" />
@@ -78,7 +78,7 @@
       </div>
       <!-- Kedua -->
       <div class="kedua">
-        <p class="judul">Apa Fungsi Transportasi Umum?</p>
+        <p class="judul">Apa Fungsi <span>Transportasi</span> Umum?</p>
         <div class="kotak">
           <div>
             <i class="fa-solid fa-dollar-sign"></i>
@@ -124,7 +124,7 @@
       </div>
       <!-- Ketiga -->
       <div class="kedua">
-        <p class="judul">Apa saja contoh transportasi umum yang canggih?</p>
+        <p class="judul">Apa saja contoh <span>transportasi</span> umum yang canggih?</p>
         <p class="penghantar">
           Layanan transportasi umum yang efisien dan merata merupakan elemen
           penting dalam mendukung mobilitas masyarakat perkotaan yang serba
@@ -175,7 +175,7 @@
       </div>
       <!-- Keempat -->
       <p class="judul">
-        Apa saja solusi transportasi pada <span>Smart City? </span>
+        Apa saja solusi <span>transportasi</span> pada <span>Smart City? </span>
       </p>
       <div class="ketiga">
         <div>
