--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="keempat">
       <h1>1. Jakarta</h1>
       <div class="contoh">
-        <img src="image/jakarta.jpg" alt="" />
+        <img src="./image/jakarta.jpg" alt="" />
         <p>
           Sebagai ibukota sekaligus kota dengan tingkat urbanisasi tertinggi
           di Indonesia, <span>tidak heran jika Daerah Ibukota Jakarta menjadi salah
@@ -297,7 +297,7 @@
       </div>
       <h1>2. Yogyakarta</h1>
       <div class="contoh">
-        <img src="image/yogyakarta.jpg" alt="" />
+        <img src="./image/yogyakarta.jpg" alt="" />
         <p>
           Kota lain yang juga sudah mencoba menerapkan konsep smart city
           adalah Kota Yogyakarta. Menurut publikasi dari Pusat Studi
@@ -318,7 +318,7 @@
       </div>
       <h1>3. Denpasar</h1>
       <div class="contoh">
-        <img src="image/Denpasar-2_0.jpeg" alt="" />
+        <img src="./image/Denpasar-2_0.jpeg" alt="" />
         <p>
           Kota berbasis pariwisata lain yang juga sudah menerapkan smart city
           adalah Denpasar. Pada tahun 2016, <span>ibu kota provinsi Bali ini
@@ -344,7 +344,7 @@
       </div>
       <h1>4.Medan</h1>
       <div class="contoh">
-        <img src="/image/KOTA-MEDAN.jpg" alt="" />
+        <img src="./image/KOTA-MEDAN.jpg" alt="" />
         <p>
           Daerah lain selain Jakarta dan Makassar yang masuk ke dalam Smart
           City Index (SCI) tahun 2023 adalah Medan. Dalam indeks tersebut,
@@ -365,7 +365,7 @@
       </div>
       <h1>5. Makassar</h1>
       <div class="contoh">
-        <img src="image/makasar.jpg" alt="" />
+        <img src="./image/makasar.jpg" alt="" />
         <p>
           Dibantu dengan ASEAN-Australia Smart City Trust Fund,<span> Makassar
           berhasil menjadi “kota pintar” peringkat 114 dari 141 kota pintar di
